--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2128,7 +2128,7 @@ input:-webkit-autofill::first-line {
     
     .swiss-security-badge {
         margin-top: 1rem;
-        margin-bottom: 3rem;
+        margin-bottom: 6rem;
         padding: 0.5rem 1rem;
     }
     
